# zero2prod

./: Cargo.toml  docker_compose.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
